# vacancy-rent

./: .gitignore  README.md  index.html  publish.sh  pyproject.toml
src/vacancy_rent/: acs.py  build_data.py  combine.py  zillow.py
web/: acs.json  combined.json  data.json  template.html  zillow.json
